--- a/workshop2/public/index.html
+++ b/workshop2/public/index.html
@@ -9,6 +9,13 @@
       content="Web site created using create-react-app"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
+    <style>
+      body, button {font-family: 'Kanit', sans-serif;}
+    </style>
+    
     <title>React App</title>
   </head>
   <body>
